changed update URL to keep project soley on github

--- a/Update.plist
+++ b/Update.plist
@@ -14,7 +14,7 @@
        <key>CFBundleShortVersionString</key>
        <string>1.0</string>
        <key>URL</key>
-       <string>http://ryanmcollins.com/downloads/keeper-blocker/Keeper%20Blocker.safariextz</string>
+       <string>https://github.com/ryanmcollins/Keeper-Blocker/raw/master/Keeper%20Blocker.safariextz</string>
      </dict>
    </array>
 </dict>
